--- a/some-page.html
+++ b/some-page.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
      <meta charset="UTF-8">
-     <title>Git</title>
+     <title>some page</title>
 </head>
 </body>
-Hello, this this new changes
-Some cool changes4
-Here goes new text
+some page text
 </html>
-
